# Horse-Racing-Machine-Learning

./: .gitignore  README.md
cpp_simulation/: CMakeLists.txt  README.md
cpp_simulation/src/: csv_io.cpp  csv_io.hpp  main.cpp  metrics.cpp  metrics.hpp  simulation.cpp  simulation.hpp
cpp_simulation/tests/: test_main.cpp
general_dataset/: README.md  residual_sigma.txt  test_data.csv  val_data.csv
linear_regression/: filtered_test_data.csv  filtered_train_data.csv  linear_regression.ipynb  linear_regression_QOL.py  linear_regression_no_rmse.ipynb
neural_network/: neural_net_regression.ipynb  neural_net_regression.py
